# ohtu-tehtavat

./: README.md
viikko1/nhl-statistics-1/src/: statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  viitegeneraattori.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/tests/: login.robot  resource.robot
viikko4/int-joukko/: .pylintrc
viikko4/int-joukko/src/: index.py  int_joukko.py
viikko4/int-joukko/src/tests/: int_joukko_test.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: retro.md
viikko5/laskin/src/: commands.py  kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/: PULL.md
viikko6/query-language/src/: index.py  matchers.py  query.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/: pyproject.toml
viikko7/kivi-paperi-sakset/src/: index.py  kps_factory.py  peli.py
viikko7/kivi-paperi-sakset/src/oliot/: kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  kps_template.py  tuomari.py
viikko7/kivi-paperi-sakset/src/tekoalyt/: tekoaly_parannettu.py
