[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Oskar Sjölund <oskar.sjolund93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pytest = "^6.2.5"
jsonpickle = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
